<resources>
    <string name="app_name">Lesson19</string>
    <string name="item_cities">Города</string>
    <string name="item_colors">Цвета</string>
    <string name="item_account">Аккаунт</string>
    <string name="first_fragment">Первый фрагмент</string>
    <string name="second_fragment">Второй фрагмент</string>
    <string name="losangeles_title">Лос-Анджелес</string>
    <string name="paloalto_title">Пало-Альто</string>
    <string name="boston_title">Бостон</string>
    <string name="newyork_title">Нью Йорк</string>
    <string name="chicago_title">Чикаго</string>
    <string name="sanfrancisco_title">Сан-Франциско</string>
    <string name="washington_title">Вашингтон</string>
    <string name="paloalto_description">Па́ло-А́льто —  город в округе Санта-Клара, штат Калифорния, США. Название происходит от испанских слов исп. palo — «дерево» (оно изображено на гербе города) и исп. alto — «высокое». Пало-Алто является историческим центром американской Кремниевой долины.
    </string>
    <string name="losangeles_description">
        Лос-А́нджелес — город в США на юге штата Калифорния, находящийся на берегу Тихого океана. Лос-Анджелес является одним из крупнейших мировых культурных, научных, экономических, образовательных центров. Также город — один из крупнейших мировых центров индустрии развлечений в сфере кино, театра, музыки, литературы и телевидения.
    </string>
    <string name="boston_description">
        Бо́стон — столица и крупнейший город штата Массачусетс в США. Город известен своими образовательными учреждениями (более ста университетов и колледжей, включая такие известные как Гарвардский университет, Массачусетский технологический институт (MIT), Бостонский университет и Бостонский колледж).
    </string>
    <string name="newyork_description">
        Нью-Йо́рк — крупнейший город США, входящий в одну из крупнейших агломераций мира. Нью-Йорк расположен на берегу Атлантического океана в юго-восточной части штата Нью-Йорк. Нью-Йорк — важный мировой финансовый, политический, экономический и культурный центр.
    </string>
    <string name="chicago_description">
        Чикаго, официально Город Чикаго — самый населённый город штата Иллинойс и третий по населению город в Соединённых Штатах. Расположен на берегу озера Мичиган. Чикаго — международный центр финансов, культуры, коммерческой деятельности, индустрии, обучения, технологий, телекоммуникаций и транспорта.
    </string>
    <string name="sanfrancisco_description">
        Сан-Франци́ско — город и округ в штате Калифорния, США, названный в честь католического святого Франциска Ассизского. Сан-Франциско является мировым туристическим центром, известный своими летними холодными туманами, крутыми холмами и сочетанием викторианской и современной архитектуры.
    </string>
    <string name="washington_description">
        Вашингто́н — город, столица Соединённых Штатов Америки. В Вашингтоне находятся главные представительства всех трёх ветвей федеральной власти, включая резиденцию Президента США в Белом доме, а также множество памятников и музеев общенационального значения.
    </string>
    <string name="personal_info">Жумабеков Нурдоолот Эдилбекович \nтел.: 0508 170-177 \ne-mail: nurdoolot.zhumabekov@it-academy.kg</string>
    <string name="jobtwo_name">\'Some\'- IT-company, 2017- по настоящее время</string>
    <string name="jobtwo_desc">- Глубокие знания платформы Android \n - Отличные знания Kotlin и Android API \n - Знание Material Design и опыт разработки UI \n - Опыт работы с SQL JSON, XML, Firebase, PUSH \n - Умение работать с GitHub \n - Оптимизация производительности приложения \n - Опыт разработки масштабных приложений \n - Разработка и создание дизайна мобильных приложений</string>
    <string name="jobone_name">\'BBC\'- IT-company, 2015- 2017</string>
    <string name="jobone_desc">- Проводил ежедневные встречи с заказчиками \n - Участвовал в разработке всех частей проекта \n - Мобильное приложение, бэкенд, веб приложение \n - Анализировал требования заказчиков \n - Вел документацию, писал инструкции \n - Автоматизировал сборку и поставку всего проекта</string>
</resources>